--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--为了兼容移动设备，使当前页面和移动设备比例保持1：1-->
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>Bootstrap 101 Template</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/index.css">
 
@@ -24,6 +24,12 @@
 </head>
 <body>
 <div class="content">
+    <!--轮播部分-->
+    <div id="bj-container">
+        <div id="section0" class="section">
+
+        </div>
+    </div>
     <!--tangtonsong导航-->
     <div id="section1" class="section">
         <div class="bar" id="nav-fix">
