--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         <p>09/2013</p>
                     </div>
                     <div class="myBox-text text-left" style="float:right">
-                        <h3>江西师范大学</h3>
+                        <h3>南昌大学</h3>
                         <h4>大学本科</h4>
                         <p>专业考证：计算机网页设计证书，软件测试工程师</p>
                         <p>荣誉奖状：被评为三好学生，优秀班干部</p>
